# domgpt

./: index.html  package-lock.json  package.json  td.md  tsconfig.json  vite.config.ts
.github/workflows/: android-build.yml  build.yml
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  script_to_audio.rs  ttslib.rs
src/agents/: agents.ts  debug.ts  phase-planner.ts
src/agents/info/: info-dialog.tsx  info-tools.ts  info-types.ts
src/agents/interview/: interview-dialog.tsx  interview-types.ts
src/components/: EmptyState.tsx  MoodDisplay.tsx  NavHeader.tsx  PageHeader.tsx  PageLayout.tsx  PhaseChallenge.tsx  PhaseTimeline.tsx  markdown-text.tsx
src/components/ui/shadcn-io/ai/: chat.tsx  code-block.tsx  conversation.tsx
src/contexts/: ConfigContext.tsx
src/lib/: agent.ts  backgroundJobs.ts  context.ts  http.ts  memory.ts  mood.ts  phase.ts  subagent.ts
src/lib/models/: index.ts  openrouterv2.ts
src/lib/tts/: tts-rust.ts  tts.ts
src/pages/: main.tsx
src/pages/activity/: agent.ts  index.ts  types.ts  view.tsx
src/pages/affirm/: agent.ts  stats.ts  types.ts  view.tsx
src/pages/challenge/: agent.ts  index.ts  types.ts  view.tsx
src/pages/inventory/: agent.ts  image-store.ts  types.ts  view.tsx
src/pages/onboarding/: PhasePlannerStep.tsx  index.ts  view.tsx
src/pages/profile/: agent.ts  index.ts  types.ts  view.tsx
src/pages/reflection/: agent.ts  index.ts  types.ts  view.tsx
src/pages/rituals/: agent.ts  index.ts  types.ts  view.tsx
src/pages/rule/: agent.ts  index.ts  types.ts  view.tsx
src/pages/safe/: agent.ts  index.ts  types.ts  view.tsx
src/pages/settings/: index.ts  view.tsx
src/pages/voice/: agent.ts  types.ts  view.tsx
src/pages/workflows/: index.ts  view.tsx
test/: plantest.ts
