[package]
name = "domgpt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "domgpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-cors-fetch = "4.1.0"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
ort = "2.0.0-rc.7"
openssl = { version = "0.10", features = ["vendored"] }
# Array processing (like NumPy)
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.10"

# Audio processing
hound = "3.5"
rustfft = "6.2"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Unicode normalization
unicode-normalization = "0.1"

# Regular expressions
regex = "1.10"

# System calls
libc = "0.2"

dasp = "0.11.0"
dasp_sample= "0.11.0"
dasp_frame= "0.11.0"
dasp_slice= "0.11.0"
dasp_ring_buffer= "0.11.0"
dasp_peak= "0.11.0"
dasp_rms= "0.11.0"
dasp_envelope= "0.11.0"
dasp_interpolate= "0.11.0"
dasp_window= "0.11.0"
dasp_signal= "0.11.0"
dasp_graph= "0.11.0"

# HTML/XML parsing
kuchiki = "0.8"

# HTTP client for downloading models
reqwest = { version = "0.12", features = ["blocking"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
